--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,9 +3,9 @@
 #=====================================================#
 #=================== Global configuration ============#
 url=https://espanol.yahoo.com/
-capabilities.browserName=chrome
+#capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-selenium_url=http://localhost:4444/wd/hub
+#selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -38,13 +38,18 @@ init_retry_interval=1
 #=====================================================#
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-#selenium_url=http://localhost:4723/wd/hub
-#capabilities.automationName=uiautomator2
-#capabilities.deviceName=<phone_name>
-#capabilities.udid=<phone_udid>
-#capabilities.deviceType=phone
-#capabilities.platformName=ANDROID
+selenium_url=http://localhost:4723/wd/hub
+capabilities.automationName=uiautomator2
+#capabilities.deviceName=Pixel_XL_API_30
+capabilities.deviceName=sdk_gphone_x86
+capabilities.udid=emulator-5554
+capabilities.deviceType=phone
+capabilities.platformName=ANDROID
+capabilities.appPackage=com.google.android.apps.translate
+capabilities.appActivity=com.google.android.apps.translate.TranslateActivity
+#capabilities.app=/data/app/~~jzB9vu7PbgCoMLm56tewbg==/com.google.android.apps.translate-px0_ntHwe5JbenQZ_bBmIw==/base.apk
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+#capabilities.chromedriverExecutableDir=C:/Program Files/chromedriver_win32_83_0_/chromedriver.exe
 #=====================================================#
 #uncomment and change deviceName and platformVersion for iOS test
 #======== Local Run for iOS Mobile ===============#
